added persistence with MongoDB - mongoose

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY="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"
+MONGOOSE_CONNECT_LINK="mongodb+srv://nickelpaulsen:JvSolzprsUVLRaHW@psycho.mqlealx.mongodb.net/?retryWrites=true&w=majority"
