--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "das-kind-in-dir-muss-heima-finden",
   "version": "1.0.0",
   "engines": {
-      "node": "^18.13.0"
+    "node": "^18.13.0"
   },
   "description": "",
   "main": "Übung: Finde innere Helfer.js",
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "logger": "^0.0.1",
+    "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
