Made the app more modular!

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY="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"
 MONGOOSE_CONNECT_LINK="mongodb+srv://nickelpaulsen:JvSolzprsUVLRaHW@psycho.mqlealx.mongodb.net/?retryWrites=true&w=majority"
+NODE_ENV="development"
+API_PORT="3001"
